# image-resize

./: README.md  pyproject.toml
image_resize/: main.py
